# sel4-rs

./: .gitignore  Cargo.toml  README.md  _build.rs  build.rs  hello-image-x86_64-pc99  linker.lds  run_debug.sh  sel4_linker.lds  tinysize.sh
.cargo/: config.toml
common/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: basic_types.rs  boot.rs  config.rs  console.rs  hardware.rs  machine.rs  main.rs  multiboot.rs  paging.rs  panic.rs  racycell.rs  stack.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: acpi.rs  asm.rs  constants.rs  cpu.rs  devices.rs  hardware.rs  interrupt.rs  machine.rs  mod.rs  pic.rs  smp.rs
kernel/src/arch/x86_64/boot/: boot0.rs  boot1.rs  bootinfo.rs  mod.rs  multiboot.rs
kernel/src/boot/: boot0.rs  boot1.rs  mod.rs  multiboot.rs  stack.rs
kernel/src/utils/: fixedarr.rs  mod.rs  panic.rs
multiboot/: Cargo.toml  README.md  build.rs  linker32.lds
multiboot/src/: boot_pt.rs  lib.rs  multiboot.rs
src/: boot.rs  main.rs  serial.rs
