[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
no-panic = "0.1.35"
uart_16550 = "0.4.0"
ufmt = "0.2.0"

# std disabled.
thiserror = { version = "2.0.17", default-features = false }

[features]
# TODO: Enable SMP.
#default = ["smp"]
smp = []